--- a/FCon/FCon.fsproj
+++ b/FCon/FCon.fsproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Program.fs" />
+    <Compile Include="Starter.fs" />
   </ItemGroup>
 
 </Project>
